# hosting

./: .gitignore  CMakeLists.txt  README.md  hosting  hosting.sln
DotNetLib/: DotNetLib.csproj  Lib.cs
cs_code/: DotNetLib.deps.json
src/: main.cpp
src/binding/: binding.hpp
src/nethostfxr/: nethostfxr.hpp
